Fix PL horizontal scroll

--- a/components/_patterns/00-base/global/base/_pl-base.scss
+++ b/components/_patterns/00-base/global/base/_pl-base.scss
@@ -1,10 +1,6 @@
 // These styles are specifically for Pattern Lab.
 // They are not used by the site in any way.
 
-.sg-main {
-  @include wrapper;
-}
-
 .pl-template {
   display: flex;
   flex-flow: column nowrap;
@@ -16,11 +12,11 @@
     font-size: 3rem;
     text-transform: uppercase;
     background-color: $gray-darker;
-    margin: 0 calc(-50vw + 50%) $space calc(-50vw + 50%);
 
     a {
       @include wrapper(
-        $v-padding: $space
+        $v-padding: $space,
+        $h-padding: $space / 2
       );
 
       display: block;
@@ -28,6 +24,10 @@
       text-decoration: none;
       line-height: 1;
     }
+  }
+
+  .sg-pattern > div {
+    @include wrapper;
   }
 
   .sg-pattern-title {
